WorkShop_2.3_Ingress_Network/ingress_webtest_aws.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresswebtest
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
  - host: webtest1.kuberneteslabthailand.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webtest1
            port:
              number: 80
  - host: webtest2.kuberneteslabthailand.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webtest2
            port:
              number: 80
